@@ -112,8 +112,9 @@ typedef enum {
     PSLR_WHITE_BALANCE_MODE_MANUAL,
     // a few items are missing here
     PSLR_WHITE_BALANCE_MODE_FLUORESCENT_WARM_WHITE = 0x0F,
-    PSLR_WHITE_BALANCE_MODE_CTE = 0x10,
-    PSLR_WHITE_BALANCE_MODE_MAX = 0x11
+    PSLR_WHITE_BALANCE_MODE_CTE,
+    PSLR_WHITE_BALANCE_MODE_MULTI_AUTO,
+    PSLR_WHITE_BALANCE_MODE_MAX
 } pslr_white_balance_mode_t;
 
 typedef enum {
